# xmu-aiot

./: pyproject.toml
lab-flask/: app-0-starter.py  app-1-html.py  app-2-param.py  app-3-sensorweb.py  pyproject.toml
lab-flask/templates/: hello-name.html  hello-world.html  sensor-index.html  sensor-wendu.html
lab-opencv/: case5-rect.py  case6-canny.py  pyproject.toml
lab8/: case1-imshow.py  case2-imwrite.py  case3-imread.py  case4-blur.py  case7-threshold.py  case8-erode.py  case9-bitwise_and.py  main.py
