[tool.poetry]
name = "xmu-aiot"
version = "0.1.0"
description = ""
authors = ["Wind Wood <windwood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
