[tool.poetry]
name = "lab-flask"
version = "0.1.0"
description = ""
authors = ["Wind Wood <windwood@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_flask"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
