[tool.poetry]
name = "lab-opencv"
version = "0.1.0"
description = ""
authors = ["Wind Wood <windwood@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_opencv"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
